CI changes to model.tex as svn exercise

--- a/model.tex
+++ b/model.tex
@@ -242,6 +242,7 @@ and
   P\left( \ti{y}{t,\ti{M}{t,i}} | \ti{s}{t,i}\right)
   P\left( \ti{s}{t,i} | \ti{s}{t-1,i}\right).
 \end{equation}
+Like \eqref{eq:a1} \eqref{eq:alphaT} is a mixture of Gaussians.
 
 \subsection{Joint Probabilistic Data Association}
 \label{sec:JPDA}
