--- a/model.tex
+++ b/model.tex
@@ -15,8 +15,10 @@
 \newcommand{\EV}[2]{\field{E}_{#1}\left[#2\right]}
 \newcommand{\M}{{\cal M}}
 \newcommand{\transpose}{^\top}
+\newcommand{\os}[4]{{\left[ #1(#2) \right]}_{#3}^{#4}} % Object sequence
 \newcommand{\ti}[2]{{#1}{(#2)}}                         % Index
-\newcommand{\ts}[4]{{\left[ #1(#2) \right]}_{#2=#3}^{#4}} % Sequence
+\newcommand{\ts}[4]{\os{#1}{#2}{#2=#3}{#4}} % Time series
+%\newcommand{\ts}[4]{{\left[ #1(#2) \right]}_{#2=#3}^{#4}} % Sequence
 \newcommand{\argmin}{\operatorname*{argmin}}
 \newcommand{\argmax}{\operatorname*{argmax}}
 \newcommand{\cS}{{\cal S}}
@@ -30,17 +32,17 @@
 \section{Introduction}
 \label{sec:introduction}
 
-Frame by frame detection/tagging could use the result of a filtered
+Frame by frame detection/tagging could use the result of a \emph{filtered}
 forecast, ie,
 \begin{equation*}
-  P(S(t)|y_1^{t-1})
+  P(S(t)|y_1^{t-1}).
 \end{equation*}
-
-To characterize track properties, we will need decoded tracks, ie,
+Note that the best or \emph{decoded} track ie,
 \begin{align*}
   \hat s_1^T &\equiv \argmax_{s_1^T} P(s_1^T|y_1^{t-1}) \\
             &=  \argmax_{s_1^T} P(s_1^T,y_1^{t-1})
 \end{align*}
+is different than the sequence of filtered forecasts.
 
 \subsection{Filtering}
 \label{sec:filtering}
@@ -55,11 +57,12 @@ With the definitions
 \end{align}
 and applying a model characterized by the distributions
 \begin{align}
+  \label{def:alpha0}
   &\alpha_0  &&\text{The state prior} \\
   &P(\ti{s}{t+t}|\ti{s}{t}) &&\text{The state transition probability} \\
   &P(\ti{y}{t}|\ti{s}{t}) &&\text{The conditional observation probability}
 \end{align}
-one can write recursive filtering as follows:
+I can write recursive filtering as follows:
 \begin{align}
   f_t &= \EV{\alpha_{t-1}} {P(\ti{s}{t}|\ti{s}{t-1})} \\
   \gamma_t &= \EV{\ti{f}{t}} {P(\ti{y}{t}|\ti{s}{t})} \\
@@ -77,24 +80,24 @@ I will use the following definitions to describe decoding:
   \nu_t(s) & \equiv \max_{\ts{s}{\tau}{1}{t}:\ti{s}{t}=s}
   u(\ts{s}{\tau}{1}{t}) \\
   & \quad \text{The utility of the best sequence ending in } s \\
-  M_t(s) &\equiv \argmax_{s'}
+  B_t(s) &\equiv \argmax_{s'}
   \argmax_{\ts{s}{\tau}{1}{t}:\ti{s}{t-1}=s' \&\ti{s}{t}=s}
   u(\ts{s}{\tau}{1}{t}) \\
   & \quad \text{The best predecessor state for } s
 \end{align*}
-I can evaluate the functions $M_t$ and $\nu_t$ recursively as follows
+I can evaluate the functions $B_t$ and $\nu_t$ recursively as follows
 \begin{align*}
-  M_t(s) &= \argmax_{s'} \left( \nu_{t-1}(s') + \log(P(s|s') ) \right) \\
-  \nu_t(s) &= \nu_{t-1}(M_t(s)) + \log(P(s|M_t(s)) )  + \log(P(\ti{y}{t}|s) ).
+  B_t(s) &= \argmax_{s'} \left( \nu_{t-1}(s') + \log(P(s|s') ) \right) \\
+  \nu_t(s) &= \nu_{t-1}(B_t(s)) + \log(P(s|B_t(s)) )  + \log(P(\ti{y}{t}|s) ).
 \end{align*}
-Given the functions $M_t$ and $\nu_t$ $\forall t\in[1,\ldots,T]$, the
+Given the functions $B_t$ and $\nu_t$ $\forall t\in[1,\ldots,T]$, the
 following procedure decodes the best sequence of states $ \ts{\hat
   s}{\tau}{1}{T}$ from a sequence of observations $
 \ts{y}{\tau}{1}{T}$:
 \begin{align*}
   {\ti{{\hat s}}{T}} &= \argmax_s \nu_T(s) \\
   & \text{for } t \text{ from } T-1 \text{ to } 1: \\
-  & \quad \ti{\hat s}{t} = M_t( \ti{\hat s}{t+1})
+  & \quad \ti{\hat s}{t} = B_t( \ti{\hat s}{t+1})
 \end{align*}
 
 \section{Model Version One}
@@ -105,42 +108,15 @@ algorithms and write code for \emph{MVI} for the baseline prototype of
 the watcher project.  Later, I will compare proposed enhancements
 against the performance of \emph{MVI}.
 
-The number of moving objects in my model is a constant $N_s$ over
-time.  Objects may or may not be visible.  At time $t$, visibility,
-position, and velocity
-\begin{equation*}
-  \ti{s}{j,t} \equiv \left(\ti{v}{j,t},\ti{x}{j,t},\ti{\dot x}{j,t} \right)
-\end{equation*}
-characterize the state of the $j\th$ object, and the vector
-\begin{equation*}
-  \ti{s}{t} \equiv \ts{s}{j,t}{j=1}{N_s}
-\end{equation*}
-constitutes the entire state.  Each visibility component has three
-possible values with the following interpretation
-\begin{equation*}
-  \ti{v}{j,t} =
-  \begin{cases}
-    1 & \text{Object is visible} \\
-    2 & \text{Object is not visible for this frame} \\
-    3 & \text{Object is not visible for at least three frames}
-  \end{cases}
-\end{equation*}
-The components $\ti{s}{j,t}$ of the state evolve independently of each
-other.  The following equations describe
-$P(\ti{s}{j,t+1}|\ti{s}{j,t})$, ie, the dynamics of each component:
+The number of moving objects is a constant $N$ over time.  At each
+time $t$, the separate objects $\ti{s}{t,j}$ that constitute the state
+evolve independently of each other.  The following equations describe
+$P(\ti{s}{t+1,j}|\ti{s}{t,j})$, ie, the dynamics of each object:
 \begin{subequations}
   \label{eq:dynamics}
   \begin{align}
-    P_{\ti{v}{j,t+1}|\ti{v}{j,t}} &= V, & V &=
-    \begin{bmatrix}
-      P(1 \rightarrow 1) & P(1 \rightarrow 2) & 0 \\
-      P(2 \rightarrow 1) & P(2 \rightarrow 2) & P(2 \rightarrow 3) \\
-      0 & P(3 \rightarrow 2) & P(3 \rightarrow 3)
-    \end{bmatrix} \\
-    \begin{bmatrix} \ti{x}{j,t+1} \\ \ti{\xdot}{j,t+1} \end{bmatrix}
-    &= A   \begin{bmatrix} \ti{x}{j,t} \\ \ti{\xdot}{j,t} \end{bmatrix}
-    + \epsilon_{j,t}, & \epsilon_{j,t} &\sim
-    \normal{0}{\Sigma_{D}} \text{ iid} \\
+    \ti{s}{t+1,j} &= A  \ti{s}{t,j} + \ti{\epsilon}{t,j}, &
+    \ti{\epsilon}{t,j} &\sim \normal{0}{\Sigma_{D}} \text{ iid} \\
     A &= \begin{bmatrix}
       1 & 0 & 1 & 0 \\
       0 & 1 & 0 & 1 \\
@@ -155,43 +131,192 @@ $P(\ti{s}{j,t+1}|\ti{s}{j,t})$, ie, the dynamics of each component:
     \end{bmatrix}
   \end{align}
 \end{subequations}
+Each object has the following components at time $t$:
+\begin{align*}
+  &&s_{0}(t,j) & \text{ horizontal position} \\
+  &&s_{1}(t,j) & \text{ vertical position} \\
+  &&s_{2}(t,j) & \text{ horizontal velocity} \\
+  &&s_{3}(t,j) & \text{ vertical velocity}
+\end{align*}
+In addition to the moving objects, a complete description of a state
+$\ti{s}{t}$ includes a map $\ti{M}{t}\in \M$, where $\M$ is the set of
+permutations of $N$ items.  I assume that $\ti{M}{t}$ is distributed
+uniformly and independently of everything else, ie,
+\begin{equation*}
+  P(\ti{M}{t}) = \frac{1}{\left| \M\right|} =  \frac{1}{N!}.
+\end{equation*}
 
-An observation vector consists of $N_y$ locations
-$\ti{y}{t}=\ts{y}{t,i}{i=1}{N_y}$, and the probability that state $\ti{s}{t}$
-would produce observation $\ti{y}{t}$ is
-\begin{equation}
-  \label{eq:ob}
-  P(\ti{y}{t}|\ti{s}{t}) \equiv
-  \begin{cases}
-    0 & \text{if} N_y \neq N_{\text{visible}} \\
-    \frac{1}{\left|\M \right|} \sum_{M \in \M}
-    \prod_{i=1}^{N_y} P(\ti{y}{t,M(i)}|\ti{s}{t,i}) & \text{otherwise}
-  \end{cases}
-\end{equation}
-where $\M$ is the set of permutations of $N_y$ items\footnote{This
+An observation vector consists of locations
+$\ti{y}{t}=\os{y}{t,i}{i=1}{N}$.  The probability that state
+$\ti{s}{t}$ would produce observation $\ti{y}{t}$ is\footnote{This
   observation model describes indistinguishable observations.  An
   easier alternative would be objects that had different colors, or
-  even easier, objects that had observable unique tags.},
+  even easier, objects that had observable unique tags.}
+\begin{equation}
+  \label{eq:ob}
+  P(\ti{y}{t}|\ti{s}{t}) =
+    \frac{1}{\left|\M \right|} \sum_{M \in \M}
+    \prod_{i=1}^{N} P(\ti{y}{t,M(i)}|\ti{s}{t,i}).
+\end{equation}
+where
 \begin{equation*}
   \ti{y}{t,i}|\ti{s}{t,j} \sim
-  \NormalE{\ti{x}{t,j}}{\Sigma_o}{\ti{y}{t,i}} \text{ and }
+  \begin{cases}
+    \NormalE{\ti{s}{t,j}}{\Sigma_o}{\ti{y}{t,i}} & i = M(j) \\
+    \text{Uniform} & \text{Otherwise}
+  \end{cases}
+\end{equation*}
+and
+\begin{equation*}
   \Sigma_o = \begin{bmatrix} \sigma_{xo}^2 & 0 \\ 0 &
     \sigma_{xo}^2 \end{bmatrix}.
 \end{equation*}
 In summary, aside from the initial state distribution, the model has
-the following 7 degrees of freedom:
+the following 3 degrees of freedom:
 \begin{center}
   \begin{tabular}{|cp{15em}c|}
     \hline
     Symbol & Description & Degrees of freedom \\
     \hline
-    $T$ & Probabilities of transition between visibility levels & 4 \\
     $\Sigma_D$ & Dynamical noise & 2 \\
     $\Sigma_o$ & Observation noise & 1 \\
     \hline
   \end{tabular} 
 \end{center}
 
+\subsection{Approximation Schemes for Filtering}
+\label{sec:approximation.filter}
+
+With luck (I have not been so lucky with this application) one might
+find a parametric form for the state prior $\alpha(0)$ (see
+Eqn.~\eqref{def:alpha0}) that, combined with $\ti{y}{1}$, yields an
+expression for $\alpha(1)$ that has the same parametric form.  Such a
+form is called a \emph{conjugate family}.  Two particularly simple
+cases are discrete hidden Markov models and Kalman filters.
+
+Here, I will analyze the use of a Gaussian for $\alpha(0)$.  From that
+choice it follows that each subsequent $\ti{\alpha}{t}$ is much more
+complex.  Thus any actual implementation that starts with such an
+$\alpha(0)$ must use simplifying approximations.  I will conclude the
+section by considering a few such approximations.
+
+Let me suppose that the initial state distribution is composed of
+independent Gaussians, ie,
+\begin{align*}
+  \ti{\alpha}{0} &= P_{\os{S}{0,j}{j=1}{N} }\\
+  &= \prod_{j=1}^{N} P_{\ti{S}{0,j}} \\
+  &= \prod_{j=1}^{N} \normal{\mu_j}{\Sigma_j}.
+\end{align*}
+To find the forecast $\ti{f}{1}$, I can apply the state dynamics
+\eqref{eq:dynamics} to each object independently with the result
+\begin{align}
+  \tilde \mu_j &= A \mu_j \\
+  \tilde \Sigma_j &= A \Sigma_j A\transpose + \Sigma_D \\
+  \label{eq:defF}
+  (\tilde \mu_j, \tilde \Sigma_j ) &\equiv F(\mu_j,\Sigma_j) \\
+  \label{eq:f1}
+  \ti{f}{1} &= \prod_{j=1}^{N} {\cal N}(F(\mu_j,\Sigma_j)),
+\end{align}
+where Eqn.~\eqref{eq:defF} defines the map $F$ from a distribution at
+time $t$ to a distribution at time $t+1$.  Note that like
+$\ti{\alpha}{0}$, $\ti{f}{1}$ is simply Gaussian.  On the other hand
+\begin{equation}
+  \label{eq:a1}
+  a(1) \equiv f(1) P_{y|S} = \frac{1}{\left| \M \right|} \sum_{M \in \M}
+  \prod_{i=1}^N P(y(t,M(i)|s(t,i)) \cdot \left. {\cal
+      N}(F(\mu_j,\Sigma_j))\right|_{s_i}
+\end{equation}
+which provides an unnormalized version of the updated distribution
+$\alpha(1)$ has at least two unfortunate properties:
+\begin{enumerate}
+\item The distribution of states is a sum of $\left| \M \right|$
+  Gaussians.  If you want to track $N=100$ objects, $\alpha(1)$ will
+  have $\left| \M \right| = N! \approx 10^{156}$ terms.
+\item For each term in the sum, the distributions of the separate
+  objects $s_j$ are independent, but that independence property does
+  not hold for the sum.  So it is not true that
+  \begin{equation*}
+    P(s(1)|y(1)) = \prod_{j=1}^N  P\left( \left( s(1,j) \right)|y(1)
+    \right).
+  \end{equation*}
+\end{enumerate}
+
+Leveraging the notational clarity of \eqref{eq:a1}, I can also write
+\begin{align*}
+  \ti{\alpha}{T} \propto \sum_{\os{M}{t}{t=1}{T}:\ti{M}{t}\in \M}
+  \prod_{i=1}^N& \left[
+  P\left( \os{y}{\ti{M}{t,i}}{t=1}{T} | \os{s}{t,i}{t=1}{T}\right) \right. \\
+  & \left. P\left( \os{s}{t,i}{t=1}{T}| \ti{s}{0,i} \right)
+  P\left( \ti{s}{0,i} \right) \right] .
+\end{align*}
+Since
+\begin{equation*}
+  P\left( \os{y}{\ti{M}{t,i}}{t=1}{T} | \os{s}{t,i}{t=1}{T}\right) =
+  \prod_{t=1}^T P\left( \ti{y}{t,\ti{M}{t,i}} | \ti{s}{t,i}\right)
+\end{equation*}
+and
+\begin{equation*}
+  P\left( \os{s}{t,i}{t=1}{T}| \ti{s}{0,i} \right) = \prod_{t=1}^T
+  P\left( \ti{s}{t,i} | \ti{s}{t-1,i}\right),
+\end{equation*}
+\begin{equation}
+  \label{eq:alphaT}
+  \ti{\alpha}{T} \propto \sum_{\os{M}{t}{t=1}{T}}
+  \prod_{i=1}^N  P\left( \ti{s}{0,i} \right) \prod_{t=1}^T
+  P\left( \ti{y}{t,\ti{M}{t,i}} | \ti{s}{t,i}\right)
+  P\left( \ti{s}{t,i} | \ti{s}{t-1,i}\right).
+\end{equation}
+Like \eqref{eq:a1} \eqref{eq:alphaT} is a mixture of Gaussians.  The
+number of components in the mixture $\left| \ts{M}{t}{1}{T}\right| =
+(N!)^T$ is absurdly large.
+
+\subsubsection{Approximating with $\hat M$}
+\label{sec:Mhat.filter}
+
+Approximate the sum with a single $\ts{\hat M}{t}{1}{T}$.  Try to select
+$\ts{\hat M}{t}{1}{T}$ to get the biggest term in the sum.
+Alternatively, use a few terms.
+
+\subsubsection{Joint Probabilistic Data Association}
+\label{sec:JPDA.filter}
+
+\subsubsection{Multiple Hypothesis Tracking}
+\label{sec:MHT.filter}
+
+\subsection{Approximation Schemes for Decoding}
+\label{sec:approximation.decode}
+
+A solution to the decoding problem
+\begin{align*}
+  \hat s_1^T &\equiv \argmax_{s_1^T} P(s_1^T|y_1^{t-1}) \\
+            &=  \argmax_{s_1^T} P(s_1^T,y_1^{t-1})
+\end{align*}
+contains only a single sequence of permutations $\ts{\hat
+  M}{t}{1}{T}$.  Thus I need not approximate a mixture of Gaussians.
+
+I'll begin by considering decoding a trajectory of a single object
+from a single sequence of observations.  In addition to the notation
+in Section~\ref{sec:decoding}, I'll use $C(s,s',t)$ to denote the
+maximum of the log of the likelihood of the data
+$\ts{y}{\tau}{1}{t+1}$ over sequences $\ts{s}{\tau}{1}{t+1}$ that end
+with $\ti{s}{t} = s$ and $\ti{s}{t+1} = s'$.  Assuming that $\nu(s,t)$
+is quadratic, I can write the following recursion:
+\begin{align}
+  \nu(s,t) &= -\frac{(s-\mu_{\nu,t})^T
+    \Sigma_{\nu,t}^{-1}(s-\mu_{\nu,t}) }{2} \\
+  C(s,s',t) &= \nu(s,t)  -\frac{(s'-As)^T
+    \Sigma_{C,t}^{-1}(s'-As) }{2} + \log(P(\ti{y}{t+1}|s') \\
+  B(s,t) &= \argmax_q C(q,s,t)\\
+  \nu(s,t+1) &= C(B(s,t+1),s,t)
+\end{align}
+
+\vfill \hrule
+\section{Old Stuff}
+\label{sec:old-stuff}
+
+From here on I've just kept old text that I might use again as I
+develop the document.\\
+\hrule
 \section{Model}
 \label{sec:model}
 
@@ -203,7 +328,7 @@ position, and velocity
 \end{equation*}
 characterize the state of the $j\th$ object, and the vector
 \begin{equation*}
-  \ti{s}{t} \equiv \ts{s}{j,t}{j=1}{N_s}
+  \ti{s}{t} \equiv \os{s}{j,t}{j=1}{N_s}
 \end{equation*}
 constitutes the entire state.  Each visibility component has three
 possible values with the following interpretation
@@ -247,7 +372,7 @@ $P(\ti{s}{j,t+1}|\ti{s}{j,t})$, ie, the dynamics of each component:
 \end{subequations}
 
 An observation vector consists of $N_y$ locations
-$\ti{y}{t}=\ts{y}{t,i}{i=1}{N_y}$, and the probability that state $\ti{s}{t}$
+$\ti{y}{t}=\os{y}{t,i}{i=1}{N_y}$, and the probability that state $\ti{s}{t}$
 would produce observation $\ti{y}{t}$ is
 \begin{equation}
   \label{eq:ob}
@@ -287,19 +412,19 @@ the following 7 degrees of freedom:
 
 A complete model consists of seven parameters described in
 Section~\ref{sec:model} and an initial distribution over states, ie,
-$P_{s(0)}$.  Given a sequence $\ts{y}{t}{t=1}{T}$ of $T$ vectors of
+$P_{s(0)}$.  Given a sequence $\os{y}{t}{t=1}{T}$ of $T$ vectors of
 measurements and a complete model, the forward algorithm calculates a
-sequence of \emph{forecasts} $\ts{f}{t}{t=1}{T}$ and \emph{updates}
-$\ts{\alpha}{t}{t=1}{T}$.  Each forecast $\ti{f}{t}$ characterizes the
+sequence of \emph{forecasts} $\os{f}{t}{t=1}{T}$ and \emph{updates}
+$\os{\alpha}{t}{t=1}{T}$.  Each forecast $\ti{f}{t}$ characterizes the
 conditional distribution of states given all measurements up to the
 previous time
 \begin{equation*}
-  \ti{f}{t} \rightarrow P(\ti{s}{t+1}|\ts{y}{\tau}{\tau=1}{t}).
+  \ti{f}{t} \rightarrow P(\ti{s}{t+1}|\os{y}{\tau}{\tau=1}{t}).
 \end{equation*}
 and each update $\ti{\alpha}{t}$ characterizes the conditional
 distribution of states given all measurements up to the present time
 \begin{equation*}
-  \ti{\alpha}{t} \rightarrow P(\ti{s}{t}|\ts{y}{\tau}{\tau=1}{t}).
+  \ti{\alpha}{t} \rightarrow P(\ti{s}{t}|\os{y}{\tau}{\tau=1}{t}).
 \end{equation*}
 I will denote the initial distribution over states as
 $\ti{\alpha}{0}$.
@@ -311,14 +436,14 @@ $\ti{\alpha}{t+1}$ in the following steps:
   \label{eq:Forward}
 \begin{align}
   \label{eq:f1}
-  \ti{f}{t+1} &\equiv P_{\ti{s}{t+1}|\ts{y}{\tau}{\tau=1}{t}} =
+  \ti{f}{t+1} &\equiv P_{\ti{s}{t+1}|\os{y}{\tau}{\tau=1}{t}} =
   \EV{\ti{\alpha}{t}}{P(\ti{s}{t+1}|\ti{s}{t})} \\ 
   \label{eq:f2}
   \ti{a}{t+1} &\equiv
-  P_{\ti{y}{t+1},\ti{s}{t+1}|\ts{y}{\tau}{\tau=1}{t}} = P_{y|s}
+  P_{\ti{y}{t+1},\ti{s}{t+1}|\os{y}{\tau}{\tau=1}{t}} = P_{y|s}
   \ti{f}{t+1} \\
   \label{eq:f3}
-  \ti{\gamma}{t+1} &\equiv P(\ti{y}{t+1}|\ts{y}{\tau}{\tau=1}{t}) = \EV{\ti{f}{t+1}}{P(\ti{y}{t+1}|\ti{s}{t+1})} \\
+  \ti{\gamma}{t+1} &\equiv P(\ti{y}{t+1}|\os{y}{\tau}{\tau=1}{t}) = \EV{\ti{f}{t+1}}{P(\ti{y}{t+1}|\ti{s}{t+1})} \\
   \label{eq:f4}
   \ti{\alpha}{t+1} &= \frac{\ti{a}{t+1}}{\ti{\gamma}{t+1}}
 \end{align}
@@ -331,98 +456,6 @@ where the items on the left have the following interpretations:
   observation $\ti{y}{t+1}$ given the model and the previous observations
 \item[$\ti{\alpha}{t+1}$] A distribution of states $s$
 \end{description}
-
-With luck (I have not been so lucky with this application) one might
-find a parametric form for $\alpha(0)$ that yields an expression for
-$\alpha(1)$ that has the same parametric form.  Such a form is called
-a \emph{conjugate family}.  Two particularly simple cases are discrete
-hidden Markov models and Kalman filters.
-
-\section{Approximation Schemes}
-\label{sec:approximation}
-
-In this section, I will analyze the use of a Gaussian for $\alpha(0)$.
-From that choice it follows that each subsequent $\ti{\alpha}{t}$ is much
-more complex.  Thus any actual implementation that starts with such an
-$\alpha(0)$ must use simplifying approximations.  I will conclude the
-section by considering a few such approximations.
-
-Let me suppose that each state must always be visible and that the
-initial state distribution is composed of independent Gaussians, ie,
-\begin{align*}
-  \ti{\alpha}{0} &= P_{\ts{S}{0,j}{j=1}{N} }\\
-  &= \prod_{j=1}^{N} P_{\ti{S}{0,j}} \\
-  &= \prod_{j=1}^{N} \normal{\mu_j}{\Sigma_j}.
-\end{align*}
-To find the forecast $\ti{f}{1}$, I can apply the state dynamics
-\eqref{eq:dynamics} to each object independently with the result
-\begin{align*}
-  \tilde \mu_j &= A \mu_j \\
-  \tilde \Sigma_j &= A \Sigma_j A\transpose + \Sigma_D \\
-  (\tilde \mu_j, \tilde \Sigma_j ) &\equiv F(\mu_j,\Sigma_j) \\
-  \ti{f}{1} &= \prod_{j=1}^{N} {\cal N}(F(\mu_j,\Sigma_j))
-\end{align*}
-Using $M$ to denote a permutation of $N$ items and $\M$ to denote the
-set of possible permutations, I write
-\begin{equation}
-  \label{eq:a1}
-  a(1) = f(1) P_{y|S} = \frac{1}{\left| \M \right|} \sum_{M \in \M}
-  \prod_{i=1}^N P(y_{M(i)}|s_i) \cdot \left. {\cal N}(F(\mu_j,\Sigma_j))\right|_{s_i}
-\end{equation}
-which provides an unnormalized version of the updated distribution
-$\alpha(1)$.  There are at least two unfortunate properties of
-\eqref{eq:a1}:
-\begin{enumerate}
-\item The distribution of states is a sum of $\left| \M \right|$
-  Gaussians.  If you want to track $N=100$ objects, $\alpha(1)$ will
-  have $\left| \M \right| = N! \approx 10^{156}$ terms.  Approximating
-  $\alpha(1)$ with the largest term requires finding the best
-  permutation, which is the same as solving a traveling salesman
-  problem.
-\item For each term in the sum, the distributions of the separate
-  objects $s_j$ are independent, but that independence property does
-  not hold for the sum.  So it is not true that
-  \begin{equation*}
-    P(s(1)|y(1)) = \prod_{j=1}^N  P\left( \left( s(1) \right)_j|y(1)
-    \right).
-  \end{equation*}
-\end{enumerate}
-
-Leveraging the notational clarity of \eqref{eq:a1}, I can also write
-\begin{equation*}
-  \ti{\alpha}{T} \propto \sum_{\ts{M}{t}{t=1}{T}:\ti{M}{t}\in \M}
-  \prod_{i=1}^N
-  P\left( \ts{y}{\ti{M}{t,i}}{t=1}{T} | \ts{s}{t,i}{t=1}{T}\right)
-  P\left( \ts{s}{t,i}{t=1}{T}| \ti{s}{0,i} \right)
-  P\left( \ti{s}{0,i} \right) .
-\end{equation*}
-Since
-\begin{equation*}
-  P\left( \ts{y}{\ti{M}{t,i}}{t=1}{T} | \ts{s}{t,i}{t=1}{T}\right) =
-  \prod_{t=1}^T P\left( \ti{y}{t,\ti{M}{t,i}} | \ti{s}{t,i}\right)
-\end{equation*}
-and
-\begin{equation*}
-  P\left( \ts{s}{t,i}{t=1}{T}| \ti{s}{0,i} \right) = \prod_{t=1}^T
-  P\left( \ti{s}{t,i} | \ti{s}{t-1,i}\right),
-\end{equation*}
-\begin{equation}
-  \label{eq:alphaT}
-  \ti{\alpha}{T} \propto \sum_{\ts{M}{t}{t=1}{T}}
-  \prod_{i=1}^N  P\left( \ti{s}{0,i} \right) \prod_{t=1}^T
-  P\left( \ti{y}{t,\ti{M}{t,i}} | \ti{s}{t,i}\right)
-  P\left( \ti{s}{t,i} | \ti{s}{t-1,i}\right).
-\end{equation}
-Like \eqref{eq:a1} \eqref{eq:alphaT} is a mixture of Gaussians.
-
-\subsection{Joint Probabilistic Data Association}
-\label{sec:JPDA}
-
-\subsection{Multiple Hypothesis Tracking}
-\label{sec:MHT}
-
-\section{Old Stuff}
-\label{sec:old-stuff}
 
 Each forecast and update characterizes a distribution of possible
 states and thus has the same structure with the following
