--- a/model.tex
+++ b/model.tex
@@ -346,22 +346,45 @@ I derive \eqref{eq:decode_B} by solving\footnote{The derivation of
 Note that the independent variable $s$ in \eqref{eq:decode_B} is the
 state at the future time $t+1$, while in \eqref{eq:decode_u'}, $s$ is
 the state at the earlier time $t$.  I obtain \eqref{eq:new_Sigma} by
-expanding $u'(B(s,t),s,t)$ and completing the square\footnote{Letting
-  $B$ denote $\left( \Sigma_t^{-1} + A^T \Sigma_D^{-1} A \right)^{-1}
-  \left( \Sigma_t^{-1} \mu_t + A^T \Sigma_D^{-1} s \right)$, I write
+expanding $u'(B(s,t),s,t)$ and completing the square\footnote{Using
+  the notation
+  \begin{align*}
+    B &\equiv \left( \Sigma_t^{-1} + A^T \Sigma_D^{-1} A \right)^{-1}
+  \left( \Sigma_t^{-1} \mu_t + A^T \Sigma_D^{-1} s \right) \\
+  &= G + Fs \\
+  G &\equiv \left( \Sigma_t^{-1} + A^T \Sigma_D^{-1} A \right)^{-1}
+  \Sigma_t^{-1} \mu_t \\
+  F &\equiv  \left( \Sigma_t^{-1} + A^T \Sigma_D^{-1} A \right)^{-1}
+  A^T \Sigma_D^{-1},
+  \end{align*}
+  I write
   \begin{align*}
     \nu(s,t+1) &=  -\frac{1}{2}(B-\mu_{t})^T \Sigma_{t}^{-1}
-    (B-\mu_{t}) + R_t  - \frac{1}{2} (s-AB)^T \Sigma_{D}^{-1} (s-AB)
-    \\
+    (B-\mu_{t}) + R_t\\
+    &\quad - \frac{1}{2} (s-AB)^T \Sigma_{D}^{-1} (s-AB)\\
     &\quad - \frac{1}{2}(\ti{y}{t+1}-O s)^T \Sigma_{O}^{-1}
     (\ti{y}{t+1}-Os) \\
+    -2 \nu(s,t+1) &= (G-\mu_{t}+Fs)^T \Sigma_{t}^{-1} (G-\mu_{t}+Fs) \\
+    &\quad + ((1-AF)s-AG)^T \Sigma_{D}^{-1} ((1-AF)s-AG)\\
+    &\quad + (\ti{y}{t+1}-O s)^T \Sigma_{O}^{-1} (\ti{y}{t+1}-Os) -2R_t \\
     &= s^T q s - 2s^T l + c
   \end{align*}
-  where the constant term $c$ is irrelevant and the quadratic, $q$,
-  linear, $l$ terms are
+  where the constant term $c$ is irrelevant and the quadratic and
+  linear terms are
   \begin{align*}
-    q &= \\
-    l &=
+    q &= F^T\Sigma_t^{-1}F + (1-AF)^T\Sigma_D^{1-}(1-AF) +
+    O^T\Sigma_O^{-1}O \\
+    &= O^T\Sigma_O^{-1}O + \Sigma_D^{-1} - \Sigma_D^{-1}A
+    ( \Sigma_t^{-1} + A^T\Sigma_D^{-1}A )^{-1}A^T\Sigma_D^{-1}\\
+    &= O^T\Sigma_O^{-1}O + (\Sigma_D + A \Sigma_t A^T)^{-1}
+    \text{ by matrix inversion lemma} \\
+    l &= F^T \Sigma_t^{-1}(G-\mu_t) - (1-AF)^T\Sigma_D^{-1}AG -
+    O^T\Sigma_O^{-1}y(t+1)  \\
+    &= F^T(\Sigma_t^{-1}+A^T\Sigma_D^{-1}A)G - F^T\Sigma_t^{-1}\mu_t -
+    \Sigma_D^{-1}AG - O^T\Sigma_O^{-1}y(t+1) \\
+    &= -\Sigma_D^{-1}AG - O^T\Sigma_O^{-1}y(t+1) \\
+    &= -\Sigma_D^{-1}A \left( \Sigma_t^{-1} + A^T \Sigma_D^{-1} A
+    \right)^{-1} \Sigma_t^{-1} \mu_t - O^T\Sigma_O^{-1}y(t+1)
   \end{align*}
   The results \eqref{eq:new_Sigma} and \eqref{eq:new_mu} follow by
   applying
